--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                 <ul>
                     <li><a href="#">SIGN UP</a></li>
-                    <li><a href=""#></a>LOGIN</li>
+                    <li><a href="#">LOGIN</a></li>
                 </ul>
             </div>
         </div>
