--- a/index.html
+++ b/index.html
@@ -16,26 +16,45 @@
                 <h2>Workscout</h2>
             </div>
 
-            <div class="nav__menu">
 
-                <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">PAGES</a></li>
-                    <li><a href="#">FOR CANDIDATES</a></li>
-                    <li><a href="#">FOR EMPLOYERS</a></li>
-                    <li><a href="#">BLOG</a></li>
-                </ul>
-            </div>
+            <ul class="nav__menu">
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">PAGES</a><i class="fas fa-angle-down"></i></li>
+                <li><a href="#">FOR CANDIDATES</a><i class="fas fa-angle-down"></i></li>
+                <li><a href="#">FOR EMPLOYERS</a><i class="fas fa-angle-down"></i></li>
+                <li><a href="#">BLOG</a></li>
+            </ul>
 
-            <div class="nav__login">
-
-                <ul>
-                    <li><a href="#">SIGN UP</a></li>
-                    <li><a href="#">LOGIN</a></li>
-                </ul>
-            </div>
+            <ul class="nav__login">
+                <li><i class="fas fa-user"></i><a href="#">SIGN UP</a></li>
+                <li><i class="fas fa-lock"></i><a href="#">LOGIN</a></li>
+            </ul>
         </div>
     </header>
+
+
+
+    <div class="search">
+
+        <div class="search__box">
+            <h1 class="search__title">Find job</h1>
+    
+            <div class="search__inputs">
+                <div class="search__input">
+                    <input type="text" placeholder="job title Company name">
+                    <i class="far fa-clock"></i>
+                </div>
+                <div class="search__input">
+                    <input type="text" placeholder="city">
+                    <i class="fas fa-map-marker-alt"></i>
+                </div>
+                <div class="search__btn"><i class="fas fa-search"></i></div>
+            </div>
+
+        </div>
+
+
+    </div>
     
 </body>
 </html>
