--- a/index.html
+++ b/index.html
@@ -50,10 +50,19 @@
                 </div>
                 <div class="search__btn"><i class="fas fa-search"></i></div>
             </div>
+            
+            <p class="search__paragrap">
+                Browse job offers by <span>category</span> or <span>location</span>
+            </p>
 
+            <p class="search__sub_title">We've over <span>15 000</span> job offers for you!</p>
         </div>
 
 
+    </div>
+
+    <div>
+        hello world
     </div>
     
 </body>
