--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
 
+    <!-- 
+        Header pages
+        Navbar
+    -->
     <header>
         <div class="nav">
             <div class="nav__logo">
@@ -33,7 +37,7 @@
     </header>
 
 
-<!-- Search Pages!!! -->
+    <!-- Search Pages!!! -->
     <div class="search">
 
         <div class="search__box">
@@ -61,8 +65,225 @@
 
     </div>
 
-    <div>
-        hello world
+    <!-- Categories pages -->
+    <div class="categories">
+        <div class="container">
+            <h4 class="categories__title">Popular Categories</h4>
+            <div class="categories__line">
+                <div class="categories__box">
+                    <i class="fas fa-chart-line"></i>
+                    <h5>ACCOUNTING/FINANCE</h5>
+                </div>
+
+                <div class="categories__box">
+                    <i class="fas fa-wrench"></i>
+                    <h5>AUTOMOTIVE JOBS</h5>
+                </div>
+
+                <div class="categories__box">
+                    <i class="far fa-building"></i>
+                    <h5>CONSTRUCTION/FACIUTIES</h5>
+                </div>
+
+                <div class="categories__box">
+                    <i class="fas fa-graduation-cap"></i>
+                    <h5>EDUCATION/TRAINING</h5>
+                </div>
+
+                <div class="categories__box">
+                    <i class="fas fa-medkit"></i>
+                    <h5>HEALTHCARE</h5>
+                </div>
+
+                <div class="categories__box">
+                    <i class="fas fa-utensils"></i>
+                    <h5>RESTAURANT/FOOD SERVICE</h5>
+                </div>
+
+                <div class="categories__box">
+                    <i class="fas fa-globe-americas"></i>
+                    <h5>TRANSPORTATION/LOGISTICS</h5>
+                </div>
+
+                <div class="categories__box">
+                    <i class="fas fa-laptop"></i>
+                    <h5>TELECOMMUNICATIONS</h5>
+                </div>
+                <button class="categories__btn">BROWSE ALL CATEGORIES</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Jobs pages -->
+    <div class="jobs">
+        <div class="container">
+            <div class="recent-jobs">
+                <h4>Recent Jobs</h4>
+                <div class="jobs__table">
+                    <div class="jobs__table__img"></div>
+                    <div class="jobs__table__title">
+                        <h5>Marketing Coordinator-SEO/SEM Experience <span>FULL-TIME</span></h5>
+                        <div class="jobs__table__location">
+                            <p><i class="fas fa-briefcase"></i>Google</p>
+                            <p><i class="fas fa-map-marker-alt"></i>Mountain View.CA</p>
+                            <p><i class="fas fa-money-bill"></i>$25 000-$30 000</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="jobs__table">
+                    <div class="jobs__table__img"></div>
+                    <div class="jobs__table__title">
+                        <h5>Marketing Coordinator-SEO/SEM Experience</h5>
+                        <div class="jobs__table__location">
+                            <p><i class="fas fa-briefcase"></i>Google</p>
+                            <p><i class="fas fa-map-marker-alt"></i>Mountain View.CA</p>
+                            <p><i class="fas fa-money-bill"></i>$25 000-$30 000</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="jobs__table">
+                    <div class="jobs__table__img"></div>
+                    <div class="jobs__table__title">
+                        <h5>Marketing Coordinator-SEO/SEM Experience</h5>
+                        <div class="jobs__table__location">
+                            <p><i class="fas fa-briefcase"></i>Google</p>
+                            <p><i class="fas fa-map-marker-alt"></i>Mountain View.CA</p>
+                            <p><i class="fas fa-money-bill"></i>$25 000-$30 000</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="jobs__table">
+                    <div class="jobs__table__img"></div>
+                    <div class="jobs__table__title">
+                        <h5>Marketing Coordinator-SEO/SEM Experience</h5>
+                        <div class="jobs__table__location">
+                            <p><i class="fas fa-briefcase"></i>Google</p>
+                            <p><i class="fas fa-map-marker-alt"></i>Mountain View.CA</p>
+                            <p><i class="fas fa-money-bill"></i>$25 000-$30 000</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="jobs__table">
+                    <div class="jobs__table__img"></div>
+                    <div class="jobs__table__title">
+                        <h5>Marketing Coordinator-SEO/SEM Experience</h5>
+                        <div class="jobs__table__location">
+                            <p><i class="fas fa-briefcase"></i>Google</p>
+                            <p><i class="fas fa-map-marker-alt"></i>Mountain View.CA</p>
+                            <p><i class="fas fa-money-bill"></i>$25 000-$30 000</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="job__table__btn">
+                    <button><i class="fas fa-plus-circle"></i> LOAD MORE LISTINCS</button>
+                </div>
+
+            </div>
+
+            <div class="job-spotlight">
+
+                <div class="job__icon">
+                    <h4>Job Spotlight</h4>
+                    <div class="job__icon__box">
+                        <i class="fas fa-angle-left"></i>
+                        <i class="fas fa-angle-right"></i>
+                    </div>
+                </div>
+
+                <div class="job__box__pages">
+                    <div class="job__box__title">
+                        <h4>Lorem ipsum dolor sit amet.</h4>
+                        <div class="job__box__location">
+                            <p><i class="fas fa-briefcase"></i>Google</p>
+                            <p><i class="fas fa-map-marker-alt"></i>Mountain View.CA</p>
+                            <p><i class="fas fa-money-bill"></i>$25 000-$30 000</p>
+                        </div>
+
+                        <div class="job__box__paragraph">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex quibusdam commodi quaerat libero laborum cumque facere, doloribus, delectus magnam</p>
+                        </div>
+
+                        <div class="job__box__btn">
+                            <button>APPLY FOR THIS JOB</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- cread footer pages -->
+    <div class="status">
+        <div class="status__text">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi pariatur eius facilis. Exercitationem, quod quia.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, vel?</p>
+        </div>
+        <h5>Collis Ta'eed,Envato</h5>
+        <div class="status__icon">
+            <i class="fas fa-circle"></i>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+        </div>
+    </div>
+
+    <!-- crea footer start pages -->
+    <div class="start-line">
+        <h4 class="start-line__title">Start Building Your Own Job Board Now</h4>
+        <button>GET STARTED</button>
+    </div>
+
+    <!-- cread posts pages -->
+    <div class="posts">
+        <div class="container">
+            <h4 class="posts__title">Recent Posts</h4>
+
+            <div class="posts__box">
+                <div class="post__box">
+                    <img src="https://cdn.pixabay.com/photo/2016/09/24/03/20/man-1690965_960_720.jpg" alt="man" width="300px" height="250px">
+                    <h4 class="post__title">Lorem ipsum dolor sit amet consectetur.</h4>
+                    <div class="post__data">
+                        <p>August27.2015</p>
+                        <p>|</p>
+                        <p>0 Comments</p>
+                    </div>
+                    <p class="post__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. A accusamus illum maiores quod doloremque enim. Unde fuga iusto asperiores. Eligendi?</p>
+
+                    <button class="post__btn">READE MORE</button>
+                </div>
+
+                <div class="post__box">
+                    <img src="https://cdn.pixabay.com/photo/2016/09/24/03/20/man-1690965_960_720.jpg" alt="man" width="300px" height="250px">
+                    <h4 class="post__title">Lorem ipsum dolor sit amet consectetur.</h4>
+                    <div class="post__data">
+                        <p>August27.2015</p>
+                        <p>|</p>
+                        <p>0 Comments</p>
+                    </div>
+                    <p class="post__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. A accusamus illum maiores quod doloremque enim. Unde fuga iusto asperiores. Eligendi?</p>
+
+                    <button class="post__btn">READE MORE</button>
+                </div>
+
+                <div class="post__box">
+                    <img src="https://cdn.pixabay.com/photo/2016/09/24/03/20/man-1690965_960_720.jpg" alt="man" width="300px" height="250px">
+                    <h4 class="post__title">Lorem ipsum dolor sit amet consectetur.</h4>
+                    <div class="post__data">
+                        <p>August27.2015</p>
+                        <p>|</p>
+                        <p>0 Comments</p>
+                    </div>
+                    <p class="post__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. A accusamus illum maiores quod doloremque enim. Unde fuga iusto asperiores. Eligendi?</p>
+
+                    <button class="post__btn">READE MORE</button>
+                </div>
+                
+            </div>
+        </div>
     </div>
     
 </body>
