finish footer links

--- a/index.html
+++ b/index.html
@@ -351,8 +351,13 @@
             <div class="footer__links container">
                 <h4>Follow Us</h4>
                 <div class="footer__links__icons">
-
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-google-plus-g"></i>
+                    <i class="fab fa-linkedin-in"></i>
                 </div>
+
+                <p>&#169 Copyright 2015 by <span>WorkScout</span> All Rights Reserved</p>
             </div>
 
     </footer>
